fixed bio section width on mobile

--- a/src/app/components/Bio/bio.module.css
+++ b/src/app/components/Bio/bio.module.css
@@ -72,6 +72,7 @@
         flex-direction: column;
         align-items: center;
         padding: 2rem; /* Adjusted padding for smaller screens */
+        width: 80%;
     }
 
     .about {
